--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,8 +16,10 @@
             android:id="@+id/seekBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-        <LinearLayout
+        <GridLayout
             android:orientation="horizontal"
+            android:rowCount="2"
+            android:columnCount="4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <Button
@@ -31,12 +33,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Play"
+                android:layout_row="0"
+                android:layout_column="1"
                 />
             <Button
                 android:id="@+id/bt_pause"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Pause"
+                android:layout_row="0"
+                android:layout_column="1"
                 />
             <Button
                 android:id="@+id/bt_next"
@@ -44,7 +50,23 @@
                 android:layout_height="wrap_content"
                 android:text="Next"
                 />
-        </LinearLayout>
+            <Button
+                android:id="@+id/bt_circle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Circle"
+                android:layout_row="0"
+                android:layout_column="3"
+                />
+            <Button
+                android:id="@+id/bt_random"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Random"
+                android:layout_row="0"
+                android:layout_column="3"
+                />
+        </GridLayout>
     </LinearLayout>
 
 </LinearLayout>
