--- a/app/src/main/res/layout/music_info.xml
+++ b/app/src/main/res/layout/music_info.xml
@@ -17,7 +17,7 @@
         />
     <TextView
         android:id="@+id/t_song"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:layout_column="1"
@@ -25,22 +25,22 @@
         />
     <TextView
         android:id="@+id/t_singer"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_column="1"
         android:layout_row="1"
         />
     <TextView
         android:id="@+id/t_albumn"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/t_point"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
         android:id="@+id/t_duration"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
 </GridLayout>
